added git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,21 @@ ENV/
 
 # mypy
 .mypy_cache/
+
+#gcloud folder
+gcloud/*
+
+# pickle files
+*.pickle
+
+#Read me
+*.md
+
+#c files
+*.c
+
+#pyx files
+*.pyx
+
+ssk_matrixs
+ssk_matrix
